# GDShare-mod

./: CMakeLists.txt
nuts/: GDMake.h
src/: main.cpp  offsets.hpp
src/ext/: Base64.hpp  ZlibHelper.hpp
src/layers/: EditLevelLayer.cpp  EditLevelLayer.hpp  ExportSettingsLayer.cpp  ExportSettingsLayer.hpp  LevelBrowserLayer.cpp  LevelBrowserLayer.hpp  LevelInfoLayer.cpp  LevelInfoLayer.hpp
src/utils/: gdshare.cpp  gdshare.hpp
